--- a/FBHackathon2015/war/index.html
+++ b/FBHackathon2015/war/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
 
-    <title>Signin Template for Bootstrap</title> 
+    <title>Facebook Hackathon</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
