--- a/FBHackathon2015/war/index.html
+++ b/FBHackathon2015/war/index.html
@@ -9,6 +9,8 @@
     <link rel="icon" href="favicon.ico">
 
     <title>Facebook Hackathon</title>
+    
+    Hello World
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
